# elpis

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CODEOWNERS  Dockerfile  INSTALL.md  README.md  Taskfile.yml  __init__.py  download_wav2vec2.py  hft_test.py  language_data_sample.json  package.json  pyproject.toml  requirements-rtd.txt  requirements.txt  setup.cfg  setup.py  state_doc.txt  test.sh  test.txt  vocab.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black_python_formatter.yml  docker_image_latest.yml  docker_image_release.yml
ctm-files/: gmm-decode-conf.sh  gmm-decode-long-conf.sh  test.sh
docs/: Makefile  api.rst  bug_report.md  conf.py  development_environment.md  index.rst  requirements.txt  state_tree.md
docs/_static/: style.css
docs/development_environment/: devcontainer.json
docs/elpis/: elpis.endpoints.rst  elpis.engines.common.input.rst  elpis.engines.common.objects.rst  elpis.engines.common.output.rst  elpis.engines.common.rst  elpis.engines.common.utilities.rst  elpis.engines.kaldi.inference.rst  elpis.engines.kaldi.input.rst  elpis.engines.kaldi.objects.rst  elpis.engines.kaldi.rst  elpis.engines.persephone.rst  elpis.engines.rst  elpis.rst  elpis.transformer.rst
docs/usage/: installation.rst  user_manual.rst
docs/wiki/: development_environment.md  docker-build.md  docker-commands.md  elpis-cli-hft.md  elpis-cli.md  elpis-dev-recipe.md  elpis-workshop.md  handy-gcp-commands.md  install-elpis-docker.md  install-elpis-on-gcp-gpu.md  install-elpis-on-gcp-kaldi.md  install-elpis-on-gcp.md  make-elpis-release.md  preparing-files.md  setup-google-cloud-account.md  viewing-elpis-training-log-file.md
elpis/: .env  __init__.py  app.py  blueprint.py  corpus.py  kaldi.py  kaldi_helpers.py  paths.py  play.py  state.py
elpis-gui/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
elpis-gui/public/: index.html
elpis-gui/src/: i18n.js  index.css  index.js  test.txt  urls.js
elpis/api/: __init__.py  databundle.py  kaldi.py  model.py  requests.py  settings.py  transcription.py
elpis/endpoints/: __init__.py  config.py  databundle.py  dataset.py  model.py  pron_dict.py  statistics.py  transcription.py
elpis/engines/: __init__.py
elpis/gpu/: Dockerfile
elpis/gui/: .eslintrc  .gitignore  CHANGELOG.md  CODEOWNERS  package-lock.json  package.json
elpis/kaldi/: __init__.py  command.py  databundle.py  dataset.py  errors.py  fsobject.py  hasher.py  interface.py  logger.py  model.py  path_structure.py  resample.py  session.py  test_databundle.py  test_filesystemobject.py  test_model.py  test_util.py  transcription.py  util.py
elpis/kaldi_old/: __init__.py  interface.py  model.py  prerequisite.py  test_databundle.py  test_filesystemobject.py  test_interface.py  test_util.py
elpis/objects/: dataset.py  fsobject.py  model.py  (+5 more)
espnet/: Dockerfile
gpu/: Dockerfile
tests/: README.md  test_server.py
(+404 files in other folders)
