[tool.poetry]
name = "elpis"
version = "1.0.4"
description = "Elpis is a tool which allows language workers with minimal computational experience to build their own speech recognition models to automatically transcribe audio."
authors = ["CoEDL"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "3.8.*"
appdirs = "^1.4.4"
Flask = "^1.1.2"
Jinja2 = "^3.1.2"
langid = "^1.1.6"
numpy = "^1.23.4"
pydub = "^0.25.1"
pympi-ling = "^1.70.2"
requests = "^2.28.1"
setuptools = "^65.5.0"
werkzeug = "^1.0.1"
dict2xml = "^1.7.2"
llvmlite = "0.39.1"
librosa = "0.9.2"
numba = "0.56.3"
python-dotenv = "^0.21.0"
praatio = "^5.1.1"
nltk = "^3.7.0"
loguru = "^0.6.0"
psutil = "^5.9.2"
MarkupSafe = "2.1.1"
itsdangerous = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pylint = "^2.6.0"
wheel = "^0.36.2"
black = "^22.3.0"

[tool.black]
line-length = 100
target-version = ['py38']

[build-system]
requires = ["poetry>=1.2.2"]
build-backend = "poetry.masonry.api"
